--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="container">
-            <img class="logo" src="images/logo.png" />
+            <img class="logo" src="assets/logo.png" />
         </div>
     </body>
 </html>
